--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
-    "eslint": "8",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "eslint": "8.57.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.2",
     "sass": "1.76.0",
     "typescript": "5"
   }
