update eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     ]
   },
   "rules": {
+    "eslint-plugin-import/extensions":"never",
     "react/jsx-filename-extension": [
       2,
       {
