work done - refractor scss login file to use - added js doc to login page - updated scss variables and mixin file - updated eslint rules and fixed a lot of the linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "extends": [
     "airbnb",
+    "airbnb-typescript",
     "airbnb/hooks",
     "prettier",
     "plugin:@typescript-eslint/strict-type-checked",
@@ -23,15 +24,16 @@
     ]
   },
   "rules": {
-    "eslint-plugin-import/extensions": "never",
-    "react/jsx-filename-extension": [
-      2,
+
+    "import/extensions": [
+      "error",
+      "ignorePackages",
       {
-        "extensions": [
-          ".ts",
-          ".tsx"
-        ]
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
       }
-    ]
+   ]
   }
 }
