--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loading-skeleton": "3.4.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.12.42",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
