--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress:open": "cypress open",
-    "report:coverage": "nyc report --reporter=html"
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
@@ -38,4 +37,5 @@
     "sass": "1.76.0",
     "typescript": "5"
   }
+
 }
