--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "istanbul": "0.4.5",
+    "nyc": "^17.0.0",
     "sass": "1.76.0",
     "typescript": "5"
   }
-
 }
