--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "test": "jest"
   },
   "dependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.12.42",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
@@ -34,6 +37,8 @@
     "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "istanbul": "0.4.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nyc": "^17.0.0",
     "sass": "1.76.0",
     "typescript": "5"
