--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "eslint-config-airbnb-typescript": "18.0.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "react": "18",
     "react-dom": "18",
